--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,6 +1,13 @@
 @use "../global" as g;
 @use "sass:math";
 
+:root {
+  --container-space: #{g.$container-space-large};
+
+  @include g.is-small {
+    --container-space: #{g.$container-space-small};
+  }
+}
 
 *,
 *::before,
@@ -9,11 +16,17 @@
   word-break: break-all;
 }
 
+a,
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
 html {
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 62.5%;
-  letter-spacing: 0.013em;
+  letter-spacing: 0.04em;
   scroll-behavior: smooth;
 }
 
@@ -25,7 +38,8 @@ body {
   font-family: g.$font-family-ja;
   font-size: g.$font-default;
   line-height: g.$line-height-default;
-  color: g.$color-text;
+  color: g.$color-white;
+  background: g.$color-black;
 }
 
 img {
@@ -37,15 +51,11 @@ img {
   max-width: g.$container-width;
   padding: 0 var(--container-space);
   margin: 0 auto;
+  box-sizing: content-box;
+}
 
-  @include g.is-small {
-    padding: 0 calc(var(--container-space) * 2);
-  };
-
-  &-fluid {
-    max-width: none;
-    padding: 0 calc(var(--container-space));
-  }
+.inner-fluid {
+  padding: 0 g.$container-width;
 }
 
 .inner-short {
