--- a/assets/scss/page/_front.scss
+++ b/assets/scss/page/_front.scss
@@ -1,1 +1,42 @@
 @use '../global' as g;
+
+.back {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 200%;
+  background: linear-gradient(to right, #0b0c0b 0px,#0b0c0b 399px ,#333 1px);
+  background-repeat: repeat-x;
+  background-size: 400px;
+  transform: skewX(-30deg) translateX(-25%);
+}
+
+.frontHeadingEn {
+  font-family: g.$font-family-en;
+  font-size: clamp(1rem, 12.4vw, 12.4rem);
+  font-weight: 900;
+  margin: 0;
+  line-height: 1;
+
+  @include g.is-small {
+    font-size: clamp(3rem, 11.21vw, 4.8rem);
+  }
+}
+
+.frontLeadText {
+  font-weight: bold;
+  font-size: 4rem;
+  margin: 1em 0 0;
+
+  @include g.is-small {
+    font-size: clamp(1rem, 4.67289vw, 2rem);
+    margin-top: 1.2em;
+  }
+  
+}
+
+.frontLeadTextLarge {
+  font-weight: bold;
+  font-size: 8rem;
+}
