--- a/assets/scss/global/_variable.scss
+++ b/assets/scss/global/_variable.scss
@@ -1,4 +1,3 @@
-
 $color-primary: #000;
 $color-accent: #FFCB1F;
 $color-black: #0B0C0B;
@@ -26,12 +25,11 @@ $container-space-medium: 30px;
 $container-space-large: 40px;
 
 $header-height: 80px;
+$header-border: 2px;
 
 $transition-default: .6s;
 $transition-fast: .3s;
 $transition-slow: .85s;
-
-
 
 
 // ブレイクポイントの向きを設定
