--- a/assets/scss/common/_footer.scss
+++ b/assets/scss/common/_footer.scss
@@ -2,6 +2,7 @@
 @use "sass:map";
 
 .footer {
+  margin-top: 80px;
   position: relative;
   z-index: 6000;
 }
@@ -16,20 +17,28 @@
 }
 
 .footerContactBlock {
-  margin: 1.5em 56px 0 0;
+  margin: 1.5em 3.45423% 0 0;
+  width: 48.272885%;
+
+  & + & {
+    margin-right: 0;
+  }
 
   @include g.is-small {
     margin: 0 0 0;
+    width: auto;
   }
 }
 
 .footerContactHeading {
   font-size: 2.4rem;
   font-weight: bold;
+  border-bottom: 1px solid rgba(g.$color-white, .2);
+  padding-bottom: 0.5em;
 }
 
 .footerContactData {
-  margin: 1em 0 0;
+  margin: 1.5em 0 0;
   padding: 0;
 
   @include g.is-small {
@@ -101,7 +110,7 @@
 
 .footerBottom {
   border-top: 1px solid g.$color-white;
-  margin-top: 2em;
+  margin-top: 8em;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
